Krijimi i php file-eve

--- a/assets/css/loginform.css
+++ b/assets/css/loginform.css
@@ -13,7 +13,7 @@ body {
 }
 
 body {
-    background: url('Untitled design.png') no-repeat center/cover;
+    background: url('../assets/images/resume.png') no-repeat center/cover;
 }
 
 /* NAVBAR */
