--- a/assets/css/faqja1.css
+++ b/assets/css/faqja1.css
@@ -12,18 +12,20 @@ body {
     margin: 0;
     display: flex;
     flex-direction: column;
-    position: relative;
+    position: relative; 
 }
 
 
 body {
-    font-family: Arial, sans-serif;
-    background: #f2f2f2;
-    background: url('people.jpg') no-repeat center center/cover;
+    background-image: url('/Projekti/assets/images/resume.png');
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
     backdrop-filter: blur(5px);
 }
+
+
+
 
 
 
