--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -17,11 +17,10 @@ body {
 
 
 body {
-    font-family: Arial, sans-serif;
-    background: #f2f2f2;
-    background: url('about.jpg') no-repeat center center/cover;
+    background-image: url('../images/about.jpg');
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
     backdrop-filter: blur(5px);
 }
 
