--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -6,9 +6,12 @@
 }
 
 
-html,
+html {
+    min-height: 100%;
+}
+
 body {
-    height: 100%;
+    min-height: 100vh;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -21,6 +24,7 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    background-attachment: scroll;
     backdrop-filter: blur(5px);
     
 }
